--- a/daily_results/20241212/gen10/config.json
+++ b/daily_results/20241212/gen10/config.json
@@ -1,5 +1,5 @@
 {
-    "max_open_trades": 10,
+    "max_open_trades": 2,
     "stake_currency": "USDT",
     "stake_amount": "unlimited",
     "tradable_balance_ratio": 0.99,
@@ -44,106 +44,76 @@
             "rateLimit": 200
         },
         "pair_whitelist": [
-            "BTC/USDT",
-            "ETH/USDT",
-            "XRP/USDT",
-            "SOL/USDT",
-            "DOGE/USDT",
-            "SUI/USDT",
-            "TRX/USDT",
-            "PEPE/USDT",
-            "WLD/USDT",
             "PNUT/USDT",
-            "JASMY/USDT",
-            "ADA/USDT",
-            "SHIB/USDT",
-            "HBAR/USDT",
-            "WIF/USDT",
-            "LTC/USDT",
-            "FET/USDT",
-            "ACT/USDT",
-            "FTM/USDT",
-            "AVAX/USDT",
-            "DOT/USDT",
-            "NEAR/USDT",
-            "SAND/USDT",
-            "DYDX/USDT",
-            "ENA/USDT",
-            "LINK/USDT",
-            "FTT/USDT",
-            "GALA/USDT",
-            "TAO/USDT",
-            "CRV/USDT",
-            "ZRX/USDT",
-            "BONK/USDT",
-            "SEI/USDT",
-            "ARB/USDT",
-            "NEIRO/USDT",
-            "XLM/USDT",
-            "UNI/USDT",
-            "FIL/USDT",
-            "TIA/USDT",
-            "APT/USDT",
-            "BCH/USDT",
-            "RUNE/USDT",
-            "RSR/USDT",
-            "ZRO/USDT",
-            "THE/USDT",
-            "OP/USDT",
-            "EOS/USDT",
-            "ALGO/USDT",
-            "BOME/USDT",
-            "INJ/USDT",
-            "FLOKI/USDT",
-            "ARKM/USDT",
-            "VET/USDT",
-            "ETC/USDT",
-            "POL/USDT",
-            "ORDI/USDT",
-            "AAVE/USDT",
-            "LPT/USDT",
-            "AR/USDT",
-            "STX/USDT",
-            "USUAL/USDT",
             "ICP/USDT",
-            "JUP/USDT",
-            "EUR/USDT",
-            "DOGS/USDT",
-            "TON/USDT",
-            "ACX/USDT",
-            "NOT/USDT",
-            "THETA/USDT",
-            "PENDLE/USDT",
-            "ENS/USDT",
-            "LUNA/USDT",
-            "ATOM/USDT",
-            "ZK/USDT",
-            "LDO/USDT",
-            "ETHFI/USDT",
-            "XVG/USDT",
-            "GRT/USDT",
-            "IO/USDT",
-            "STRK/USDT",
+            "ETC/USDT",
+            "XLM/USDT",
+            "SEI/USDT",
+            "ZRO/USDT",
             "1000SATS/USDT",
-            "IOTA/USDT",
+            "ADA/USDT",
+            "AR/USDT",
+            "HBAR/USDT",
+            "MOVE/USDT",
+            "THE/USDT",
+            "BCH/USDT",
+            "BOME/USDT",
+            "USUAL/USDT",
             "EIGEN/USDT",
-            "IQ/USDT",
+            "WLD/USDT",
+            "ARB/USDT",
+            "ATOM/USDT",
+            "DOGE/USDT",
+            "OM/USDT",
+            "ETH/USDT",
+            "1MBABYDOGE/USDT",
+            "LTC/USDT",
+            "SAND/USDT",
+            "XRP/USDT",
+            "VET/USDT",
+            "NOT/USDT",
+            "SUI/USDT",
+            "DOT/USDT",
+            "ACT/USDT",
+            "PEPE/USDT",
+            "ORDI/USDT",
+            "FIL/USDT",
+            "NEAR/USDT",
+            "UNI/USDT",
+            "BTC/USDT",
+            "FET/USDT",
+            "TIA/USDT",
+            "ALGO/USDT",
+            "WIF/USDT",
+            "BONK/USDT",
+            "CRV/USDT",
+            "ENA/USDT",
+            "TRX/USDT",
             "WBTC/USDT",
-            "DASH/USDT",
-            "CAKE/USDT",
-            "W/USDT",
-            "FIDA/USDT",
-            "APE/USDT",
-            "MANA/USDT",
-            "CHZ/USDT",
-            "LUNC/USDT",
-            "PEOPLE/USDT",
-            "AMP/USDT",
-            "TRB/USDT",
-            "AEVO/USDT",
-            "ZIL/USDT",
-            "COMP/USDT",
-            "KAIA/USDT"
+            "GALA/USDT",
+            "RAY/USDT",
+            "OP/USDT",
+            "EUR/USDT",
+            "SUSHI/USDT",
+            "APT/USDT",
+            "TROY/USDT",
+            "RUNE/USDT",
+            "ME/USDT",
+            "ACX/USDT",
+            "AVAX/USDT",
+            "LINK/USDT",
+            "AAVE/USDT",
+            "TAO/USDT",
+            "NEIRO/USDT",
+            "SHIB/USDT",
+            "FTM/USDT",
+            "ORCA/USDT",
+            "POL/USDT",
+            "IO/USDT",
+            "TURBO/USDT",
+            "FLOKI/USDT",
+            "SOL/USDT",
+            "JASMY/USDT"
         ]
     },
     "pairlists": [
