auto select trading pairs during optimization

--- a/ga.json.example
+++ b/ga.json.example
@@ -26,8 +26,8 @@
     "project_dir": "/Users/zhangjiawei/Projects/GeneTrader",
     "best_generations_dir": "bestgenerations",
     "base_strategy_file": "candidates/E0V1E_Bull.py",
-    "fix_pairs": true,
-    "num_pairs": 1,
+    "fix_pairs": false,
+    "num_pairs": 30,
     "diversity_threshold": 0.1,
     "max_mutation_prob": 0.4,
     "remote_path": "/your/remote/path",
